--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
       BUILD_PLAN: nightly-2018-04-05
       HOME: /root # $HOME is set to /home/stackage in the Docker image and
                   # this drives CircleCI crazy
+      REPORTS_DIR: /opt/build-reports
       JOBS: 9
     steps:
       - checkout
@@ -25,6 +26,10 @@ jobs:
       #       curl https://ghc-artifacts.s3.amazonaws.com/nightly/latest/metadata.json --output metadata.json
       #       ./configure --prefix=/opt/ghc/head
       #       make install
+      - run:
+          name: Provide fake metadata
+          command: |
+            echo "{\"sha1\": \"87a435c89dc67c1209bd3cd8298065b29d424dca\"}" > metadata.json
       - run:
           name: Getting Stackage curator
           command: |
@@ -50,24 +55,15 @@ jobs:
       - restore_cache:
           keys: build-reports
       - run:
-          name: Ensure the directory for build reports exists
-          command: |
-            mkdir -p /opt/build-reports
-      - run:
           name: Execute the build plan
           command: |
-            stackage-curator make-bundle --jobs $JOBS --plan-file /opt/bin/$BUILD_PLAN.yaml --docmap-file docmap-file.yaml --bundle-file bundle-file.yaml --target $BUILD_PLAN --skip-haddock --skip-hoogle --no-rebuild-cabal -v 2>&1 | tee build.log  || true
-
-      # TODO Generate report of how building of the plan went. The report
-      # should contain SHA1 of GHC commit, name of build-plan that we used,
-      # information about which packages failed to build, which packages
-      # were blocked because of failed dependencies, which tests
-      # suites/benchmarks failed to build, which test suites did not pass,
-      # etc. This can be obtained by parsing of stackage-curator's output.
-
+            stackage-curator make-bundle --jobs $JOBS --plan-file /opt/bin/$BUILD_PLAN.yaml --docmap-file docmap-file.yaml --bundle-file bundle-file.yaml --target $BUILD_PLAN --skip-haddock --skip-hoogle --skip-benches --no-rebuild-cabal -v 2>&1 | tee build.log  || true
+            stack setup
+            stack build
+            stack exec stackage-head -- add --ghc-metadata metadata.json --build-log build.log --target $BUILD_PLAN --outdir $REPORTS_DIR
       - save_cache:
           key: build-reports
-          paths: /opt/build-reports/
+          paths: $REPORTS_DIR
 
 workflows:
   version: 2
