--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,7 @@ jobs:
     docker:
       - image: snoyberg/stackage:nightly
     environment:
-      # PATH: "/usr/local/cuda-8.0/bin:/opt/bin:/opt/ghc/head/bin:/usr/sbin:/usr/bin:/sbin:/bin"
-      PATH: "/usr/local/cuda-8.0/bin:/opt/bin:/opt/ghc/8.4.1/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+      PATH: "/usr/local/cuda-8.0/bin:/opt/bin:/opt/ghc/head/bin:/usr/sbin:/usr/bin:/sbin:/bin"
       BUILD_PLAN: nightly-2018-04-05
       HOME: /root # $HOME is set to /home/stackage in the Docker image and
                   # this drives CircleCI crazy
@@ -14,22 +13,18 @@ jobs:
       JOBS: 9
     steps:
       - checkout
-      # - run:
-      #     name: Remove stable GHC
-      #     command: rm -rf /opt/ghc
-      # - run:
-      #     name: Get Nightly GHC build
-      #     command: |
-      #       mkdir -p /opt/ghc/head-bindist
-      #       curl https://ghc-artifacts.s3.amazonaws.com/nightly/latest/bindist.tar.xz | tar -xJ --strip-components=1 -C /opt/ghc/head-bindist
-      #       cd /opt/ghc/head-bindist
-      #       curl https://ghc-artifacts.s3.amazonaws.com/nightly/latest/metadata.json --output metadata.json
-      #       ./configure --prefix=/opt/ghc/head
-      #       make install
       - run:
-          name: Provide fake metadata
+          name: Remove stable GHC
+          command: rm -rf /opt/ghc
+      - run:
+          name: Get Nightly GHC build
           command: |
-            echo "{\"sha1\": \"87a435c89dc67c1209bd3cd8298065b29d424dca\"}" > metadata.json
+            mkdir -p /opt/ghc/head-bindist
+            curl -L https://ghc-artifacts.s3.amazonaws.com/nightly/validate-x86_64-linux/latest/bindist.tar.xz | tar -xJ --strip-components=1 -C /opt/ghc/head-bindist
+            cd /opt/ghc/head-bindist
+            curl https://ghc-artifacts.s3.amazonaws.com/nightly/validate-x86_64-linux/latest/metadata.json --output metadata.json
+            ./configure --prefix=/opt/ghc/head
+            make install
       - run:
           name: Getting Stackage curator
           command: |
@@ -53,7 +48,9 @@ jobs:
             cd /opt/bin
             curl https://raw.githubusercontent.com/fpco/stackage-nightly/master/$BUILD_PLAN.yaml --output $BUILD_PLAN.yaml
       - restore_cache:
-          keys: build-reports
+          keys:
+            # Restore the most recent cache for this build plan.
+            - build-reports-{{ .Environment.BUILD_PLAN }}-
       - run:
           name: Execute the build plan
           command: |
@@ -62,8 +59,12 @@ jobs:
             stack build
             stack exec stackage-head -- add --ghc-metadata metadata.json --build-log build.log --target $BUILD_PLAN --outdir $REPORTS_DIR
       - save_cache:
-          key: build-reports
-          paths: $REPORTS_DIR
+          # This ensures that we push to the cash on every commit. If the
+          # part with SHA1 is omitted, CircleCI may get too smart and skip
+          # saving cache.
+          key: build-reports-{{ .Environment.BUILD_PLAN }}-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - $REPORTS_DIR
 
 workflows:
   version: 2
