--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,6 @@ jobs:
       BUILD_PLAN: nightly-2018-04-05
       HOME: /root # $HOME is set to /home/stackage in the Docker image and
                   # this drives CircleCI crazy
-      REPORTS_DIR: /opt/build-reports
       JOBS: 9
     steps:
       - checkout
@@ -21,8 +20,8 @@ jobs:
           command: |
             mkdir -p /opt/ghc/head-bindist
             curl -L https://ghc-artifacts.s3.amazonaws.com/nightly/validate-x86_64-linux/latest/bindist.tar.xz | tar -xJ --strip-components=1 -C /opt/ghc/head-bindist
-            cd /opt/ghc/head-bindist
             curl https://ghc-artifacts.s3.amazonaws.com/nightly/validate-x86_64-linux/latest/metadata.json --output metadata.json
+            cd /opt/ghc/head-bindist
             ./configure --prefix=/opt/ghc/head
             make install
       - run:
@@ -50,21 +49,34 @@ jobs:
       - restore_cache:
           keys:
             # Restore the most recent cache for this build plan.
-            - build-reports-{{ .Environment.BUILD_PLAN }}-
+            - build-reports-
+      - restore_cache:
+          keys:
+            - stack-home
+      - restore_cache:
+          keys:
+            - stack-work
       - run:
           name: Execute the build plan
           command: |
             stackage-curator make-bundle --jobs $JOBS --plan-file /opt/bin/$BUILD_PLAN.yaml --docmap-file docmap-file.yaml --bundle-file bundle-file.yaml --target $BUILD_PLAN --skip-haddock --skip-hoogle --skip-benches --no-rebuild-cabal -v 2>&1 | tee build.log  || true
             stack setup
             stack build
-            stack exec stackage-head -- add --ghc-metadata metadata.json --build-log build.log --target $BUILD_PLAN --outdir $REPORTS_DIR
+            stack exec stackage-head -- add --ghc-metadata metadata.json --build-log build.log --target $BUILD_PLAN --outdir /opt/build-reports
+            stack exec stackage-head -- diff --outdir /opt/build-reports
       - save_cache:
-          # This ensures that we push to the cash on every commit. If the
+          key: stack-home
+          paths: "~/.stack"
+      - save_cache:
+          key: stack-work
+          paths: ".stack-work"
+      - save_cache:
+          # This ensures that we push to the cache on every commit. If the
           # part with SHA1 is omitted, CircleCI may get too smart and skip
           # saving cache.
-          key: build-reports-{{ .Environment.BUILD_PLAN }}-{{ .Environment.CIRCLE_SHA1 }}
+          key: build-reports-{{ .Environment.CIRCLE_SHA1 }}
           paths:
-            - $REPORTS_DIR
+            - /opt/build-reports
 
 workflows:
   version: 2
