--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
             stack exec stackage-head -- diff --outdir /opt/build-reports
       - save_cache:
           key: stack-home
-          paths: "~/.stack"
+          paths: "/root/.stack"
       - save_cache:
           key: stack-work
           paths: ".stack-work"
@@ -81,5 +81,16 @@ jobs:
 workflows:
   version: 2
   triggered-build:
+    jobs:
+      - build
+
+  nightly:
+    triggers:
+      - schedule:
+          cron: "0 0,6,12,18 * * *"
+          filters:
+            branches:
+              only:
+                - master
     jobs:
       - build
