Implement automatic generation of Trac tickets
Store the generated tickets as build artifacts.

--- a/stackage-head.cabal
+++ b/stackage-head.cabal
@@ -39,6 +39,7 @@ library
                     , Stackage.HEAD.BuildResults
                     , Stackage.HEAD.BuildResults.Parser
                     , Stackage.HEAD.History
+                    , Stackage.HEAD.Trac
   if flag(dev)
     ghc-options:      -Wall -Werror
   else
