Store logs as a build artifact
Should help us understand what exactly went wrong when we detect something
suspicious.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,9 @@ jobs:
             stack build
             stack exec stackage-head -- add --ghc-metadata metadata.json --build-log build.log --target $BUILD_PLAN --outdir $HOME/build-reports
             stack exec stackage-head -- truncate --history-length 10 --outdir $HOME/build-reports
+      - store_artifacts:
+          path: logs
+          destination: logs
       - save_cache:
           key: new-stack-home
           paths: "/home/circleci/.stack"
