--- a/stackage-head.cabal
+++ b/stackage-head.cabal
@@ -29,6 +29,9 @@ library
                     , base             >= 4.10 && < 5.0
                     , bytestring       >= 0.10 && < 0.11
                     , cassava          >= 0.5  && < 0.6
+                    , directory        >= 1.2.5 && < 1.4
+                    , filepath         >= 1.4  && < 1.5
+                    , hashable         >= 1.2  && < 1.3
                     , megaparsec       >= 6.4  && < 7.0
                     , text             >= 0.2  && < 1.3
                     , time             >= 1.8  && < 2.0
@@ -36,10 +39,13 @@ library
                     , vector           >= 0.11 && < 0.13
   exposed-modules:    Stackage.HEAD.BuildDiff
                     , Stackage.HEAD.BuildInfo
+                    , Stackage.HEAD.BuildLogs
                     , Stackage.HEAD.BuildResults
                     , Stackage.HEAD.BuildResults.Parser
                     , Stackage.HEAD.History
+                    , Stackage.HEAD.Package
                     , Stackage.HEAD.Trac
+                    , Stackage.HEAD.Utils
   if flag(dev)
     ghc-options:      -Wall -Werror
   else
@@ -76,7 +82,7 @@ executable stackage-head
   build-depends:      aeson            >= 1.2  && < 1.4
                     , base             >= 4.10 && < 5.0
                     , bytestring       >= 0.10 && < 0.11
-                    , directory        >= 1.2.2 && < 1.4
+                    , directory        >= 1.2.5 && < 1.4
                     , filepath         >= 1.4  && < 1.5
                     , megaparsec       >= 6.4  && < 7.0
                     , optparse-applicative >= 0.14 && < 1.15
