--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
     docker:
       - image: mrkkrp/stackage-head:0.1.1
     environment:
-      BUILD_PLAN: nightly-2018-04-21
+      BUILD_PLAN: nightly-2018-04-26
       JOBS: 9
     steps:
       - checkout
@@ -37,8 +37,8 @@ jobs:
             stackage-curator make-bundle --allow-newer --jobs $JOBS --plan-file $BUILD_PLAN.yaml --docmap-file docmap-file.yaml --bundle-file bundle-file.yaml --target $BUILD_PLAN --skip-haddock --skip-hoogle --skip-benches --no-rebuild-cabal -v 2>&1 | tee build.log  || true
             stack setup
             stack build
-            stack exec stackage-head -- add --ghc-metadata metadata.json --build-log build.log --build-per-package-dir logs/nightly --target $BUILD_PLAN --outdir $HOME/build-reports
-            stack exec stackage-head -- truncate --history-length 40 --outdir $HOME/build-reports
+            stack exec stackage-head -- add --build-url $CIRCLE_BUILD_URL --ghc-metadata metadata.json --build-log build.log --build-per-package-dir logs/nightly --target $BUILD_PLAN --outdir $HOME/build-reports
+            stack exec stackage-head -- truncate --history-length 10 --outdir $HOME/build-reports
       - save_cache:
           key: new-stack-home
           paths: "/home/circleci/.stack"
@@ -55,10 +55,11 @@ jobs:
       - run:
           name: Diff build results
           command: |
-            stack exec stackage-head -- diff --build-url $CIRCLE_BUILD_URL --trac-ticket ticket.txt --outdir $HOME/build-reports
-      - store_artifacts:
-          path: ticket.txt
-          destination: trac-ticket
+            stack exec stackage-head -- diff --outdir $HOME/build-reports
+      - run:
+          name: Generate static site with the results
+          command: |
+            stack exec stackage-head -- generate-site --site-dir $HOME/site --outdir $HOME/build-reports
 
 workflows:
   version: 2
