--- a/stackage-head.cabal
+++ b/stackage-head.cabal
@@ -30,11 +30,19 @@ library
                     , bytestring       >= 0.10 && < 0.11
                     , cassava          >= 0.5  && < 0.6
                     , directory        >= 1.2.5 && < 1.4
+                    , exceptions       >= 0.8  && < 0.11
                     , filepath         >= 1.4  && < 1.5
                     , hashable         >= 1.2  && < 1.3
+                    , lucid            >= 2.9  && < 3.0
                     , megaparsec       >= 6.4  && < 7.0
+                    , modern-uri       >= 0.2.1 && < 0.3
+                    , mtl              >= 2.0   && < 3.0
+                    , path             >= 0.6  && < 0.7
+                    , path-io          >= 1.3  && < 1.4
+                    , template-haskell >= 2.10 && < 2.14
                     , text             >= 0.2  && < 1.3
                     , time             >= 1.8  && < 2.0
+                    , transformers     >= 0.4  && < 0.6
                     , unordered-containers >= 0.2.8 && < 0.3
                     , vector           >= 0.11 && < 0.13
   exposed-modules:    Stackage.HEAD.BuildDiff
@@ -44,6 +52,11 @@ library
                     , Stackage.HEAD.BuildResults.Parser
                     , Stackage.HEAD.History
                     , Stackage.HEAD.Package
+                    , Stackage.HEAD.Site
+                    , Stackage.HEAD.Site.HTML
+                    , Stackage.HEAD.Site.Location
+                    , Stackage.HEAD.Site.Resource
+                    , Stackage.HEAD.Site.Type
                     , Stackage.HEAD.Trac
                     , Stackage.HEAD.Utils
   if flag(dev)
@@ -85,7 +98,10 @@ executable stackage-head
                     , directory        >= 1.2.5 && < 1.4
                     , filepath         >= 1.4  && < 1.5
                     , megaparsec       >= 6.4  && < 7.0
+                    , modern-uri       >= 0.2.1 && < 0.3
                     , optparse-applicative >= 0.14 && < 1.15
+                    , path             >= 0.6  && < 0.7
+                    , path-io          >= 1.3  && < 1.4
                     , stackage-head
                     , text             >= 0.2  && < 1.3
                     , unordered-containers >= 0.2.8 && < 0.3
