--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,8 +60,9 @@ jobs:
           name: Upload the site to S3 bucket
           command: |
             cd $HOME/site
-            s3cmd put -P index.html s3://stackage-head/
-            s3cmd sync --access_key=$S3_ACCESS_KEY --secret-key=$S3_SECRET_KEY --region=$S3_REGION --delete-removed --skip-existing -P * s3://stackage-head/
+            cp -v $HOME/project/.circleci/.s3cfg $HOME/.s3cfg
+            s3cmd put --access_key=$S3_ACCESS_KEY --secret_key=$S3_SECRET_KEY --region=$S3_REGION -P index.html s3://stackage-head/
+            s3cmd sync --access_key=$S3_ACCESS_KEY --secret_key=$S3_SECRET_KEY --region=$S3_REGION --delete-removed --skip-existing -P * s3://stackage-head/
       - run:
           name: Diff build results
           command: |
