--- a/stackage-head.cabal
+++ b/stackage-head.cabal
@@ -29,6 +29,7 @@ library
                     , base             >= 4.10 && < 5.0
                     , bytestring       >= 0.10 && < 0.11
                     , cassava          >= 0.5  && < 0.6
+                    , containers       >= 0.5  && < 0.6
                     , directory        >= 1.2.5 && < 1.4
                     , exceptions       >= 0.8  && < 0.11
                     , filepath         >= 1.4  && < 1.5
