Fix storing artifacts

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,7 +70,7 @@ jobs:
               stack exec stackage-head -- truncate --history-length 16 --outdir $HOME/build-reports
             fi
       - store_artifacts:
-          - path: /home/circleci/build-reports/latest.csv
+          path: /home/circleci/build-reports/latest.csv
       - save_cache:
           key: stack-home-{{ checksum "stack.yaml" }}
           paths: "/home/circleci/.stack"
