--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,11 +26,11 @@ jobs:
   scheduled_build:
     resource_class: xlarge
     docker:
-      - image: mrkkrp/stackage-head:0.1.2
+      - image: mrkkrp/stackage-head:0.2.0
     environment:
-      BUILD_PLAN: nightly-2018-04-26
+      BUILD_PLAN: nightly-2018-06-14
       JOBS: 9
-      FLAKY_PKGS: "--flaky threads --flaky lifted-async --flaky fsnotify-conduit --flaky hspec-core --flaky stm-delay"
+      FLAKY_PKGS: "" # "--flaky threads --flaky lifted-async --flaky fsnotify-conduit --flaky hspec-core --flaky stm-delay"
     steps:
       - checkout
       - run:
