--- a/stackage-head.cabal
+++ b/stackage-head.cabal
@@ -25,7 +25,8 @@ flag dev
   default:            False
 
 library
-  build-depends:      aeson            >= 1.2  && < 1.4
+  build-depends:      QuickCheck       >= 2.7  && < 2.12
+                    , aeson            >= 1.2  && < 1.4
                     , base             >= 4.10 && < 5.0
                     , bytestring       >= 0.10 && < 0.11
                     , cassava          >= 0.5  && < 0.6
@@ -70,7 +71,8 @@ test-suite tests
   main-is:            Spec.hs
   hs-source-dirs:     tests
   type:               exitcode-stdio-1.0
-  build-depends:      base             >= 4.10 && < 5.0
+  build-depends:      QuickCheck       >= 2.7  && < 2.12
+                    , base             >= 4.10 && < 5.0
                     , bytestring       >= 0.10 && < 0.11
                     , hspec            >= 2.0  && < 3.0
                     , hspec-megaparsec >= 1.0  && < 2.0
@@ -78,7 +80,8 @@ test-suite tests
                     , stackage-head
                     , text             >= 0.2  && < 1.3
                     , unordered-containers >= 0.2.8 && < 0.3
-  other-modules:      Stackage.HEAD.BuildResults.ParserSpec
+  other-modules:      Stackage.HEAD.BuildDiffSpec
+                    , Stackage.HEAD.BuildResults.ParserSpec
   build-tools:        hspec-discover >= 2.0 && < 3.0
   if flag(dev)
     ghc-options:      -Wall -Werror -Wcompat
