--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,7 @@ jobs:
       BUILD_PLAN: nightly-2018-06-14
       JOBS: 9
       FLAKY_PKGS: "" # "--flaky threads --flaky lifted-async --flaky fsnotify-conduit --flaky hspec-core --flaky stm-delay"
+      HISTORY_LENGTH: 12
     steps:
       - checkout
       - run:
@@ -70,7 +71,7 @@ jobs:
             if [ $already_seen -eq 0 ] ; then
               stackage-curator make-bundle --allow-newer --jobs $JOBS --plan-file $BUILD_PLAN.yaml --docmap-file docmap-file.yaml --target $BUILD_PLAN --skip-haddock --skip-hoogle --skip-benches --no-rebuild-cabal -v 2>&1 | tee build.log  || true
               stack exec stackage-head -- add --build-url $CIRCLE_BUILD_URL --ghc-metadata metadata.json --build-log build.log --build-per-package-dir logs/nightly --target $BUILD_PLAN --outdir $HOME/build-reports
-              stack exec stackage-head -- truncate --history-length 16 --outdir $HOME/build-reports
+              stack exec stackage-head -- truncate --history-length $HISTORY_LENGTH --outdir $HOME/build-reports
             fi
       - store_artifacts:
           path: "build.log"
