Run scheduled build on commit

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -128,7 +128,7 @@ workflows:
   version: 2
   triggered-build:
     jobs:
-      - triggered_build
+      - scheduled_build
 
   nightly:
     triggers:
