--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,7 +123,7 @@ workflows:
   version: 2
   triggered-build:
     jobs:
-      - triggered_build
+      - scheduled_build
 
   nightly:
     triggers:
