--- a/stackage-head.cabal
+++ b/stackage-head.cabal
@@ -112,6 +112,7 @@ executable stackage-head
                     , path-io          >= 1.3  && < 1.4
                     , stackage-head
                     , text             >= 0.2  && < 1.3
+                    , time             >= 1.8  && < 2.0
                     , unordered-containers >= 0.2.8 && < 0.3
   if flag(dev)
     ghc-options:      -Wall -Werror
