--- a/stackage-head.cabal
+++ b/stackage-head.cabal
@@ -39,6 +39,7 @@ library
                     , exceptions       >= 0.8  && < 0.11
                     , filepath         >= 1.4  && < 1.5
                     , hashable         >= 1.2  && < 1.3
+                    , heredoc          >= 0.2
                     , lucid            >= 2.9  && < 3.0
                     , megaparsec       >= 6.4  && < 7.0
                     , modern-uri       >= 0.2.1 && < 0.3
