Update the Docker image
This image no longer supplies stackage-curator, see
the commit 4bcbc2c446bc45a04e30290b39ccc8c8973d61e8

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
   scheduled_build:
     resource_class: xlarge
     docker:
-      - image: mrkkrp/stackage-head:0.3.1
+      - image: rctwg/stackage-head:0.3.2
     environment:
       BUILD_PLAN: nightly-2018-09-26
       JOBS: 9
