--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
   scheduled_build:
     resource_class: xlarge
     docker:
-      - image: rctwg/stackage-head:0.3.2
+      - image: rctwg/stackage-head:0.3.2-hackage-security
     environment:
       BUILD_PLAN: nightly-2018-10-23
       JOBS: 9
@@ -62,6 +62,7 @@ jobs:
           name: Build stack programs
           command: |
             set -e
+            stack --version
             stack --no-terminal install stackage-curator
             stack --no-terminal install
       - run:
@@ -71,6 +72,7 @@ jobs:
       - run:
           name: Execute the build plan
           command: |
+            stack --version
             set +e
             stackage-head already-seen --target $BUILD_PLAN --ghc-metadata metadata.json --outdir $HOME/build-reports
             already_seen=$?
