Update the extra-dep syntax

--- a/stack.yaml
+++ b/stack.yaml
@@ -1,11 +1,9 @@
 resolver: lts-12.4
 packages:
 - '.'
-- location:
-    git: git@github.com:fpco/stackage-curator.git
-    commit: eaeba273bdd38f121ad200b2a876227e666f86a2
-  extra-dep: true
-
+extra-deps:
+- git: git@github.com:fpco/stackage-curator.git
+  commit: eaeba273bdd38f121ad200b2a876227e666f86a2
 nix:
   packages:
     - zlib
