Revert "Try latest hackage-security as a possible solution for #29"
This reverts commit fe295b889b10e37c57c0de1e4721d0bedaa4fb9a.

Instead, try a simple 'stack update' before running stackage-curator,
so that 'stack unpack' inside stackage-curator doesn't need to do it.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
   scheduled_build:
     resource_class: xlarge
     docker:
-      - image: rctwg/stackage-head:0.3.2-hackage-security
+      - image: rctwg/stackage-head:0.3.2
     environment:
       BUILD_PLAN: nightly-2018-10-23
       JOBS: 9
@@ -62,7 +62,6 @@ jobs:
           name: Build stack programs
           command: |
             set -e
-            stack --version
             stack --no-terminal install stackage-curator
             stack --no-terminal install
       - run:
@@ -73,12 +72,12 @@ jobs:
           name: Execute the build plan
           no_output_timeout: "3h"
           command: |
-            stack --version
             set +e
             stackage-head already-seen --target $BUILD_PLAN --ghc-metadata metadata.json --outdir $HOME/build-reports
             already_seen=$?
             set -e
             if [ $already_seen -eq 0 ] ; then
+              stack update # for #29
               stackage-curator make-bundle --allow-newer --jobs $JOBS --plan-file $BUILD_PLAN.yaml --docmap-file docmap-file.yaml --target $BUILD_PLAN --skip-haddock --skip-hoogle --skip-benches --no-rebuild-cabal -v >build.log 2>&1 || true
               EPOCH="$(grep -Ev '^(#|[[:space:]]*$)' epoch.txt)"
               stackage-head add --build-url $CIRCLE_BUILD_URL --ghc-metadata metadata.json --build-log build.log --build-per-package-dir logs/nightly --target $BUILD_PLAN --epoch "$EPOCH" --outdir $HOME/build-reports
